# Little2DGL

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt  quad.cpp  sandbox.cpp
include/: Canvas.hpp  Clock.hpp  Color.hpp  Input.hpp  QuadShape.hpp  Render.hpp  RenderState.hpp  Renderable.hpp  Shader.hpp  Transform.hpp  Vector2.hpp  VertexArray.hpp  VertexBuffer.hpp  Window.hpp
src/: Canvas.cpp  Clock.cpp  Color.cpp  DefaultFragmentShader.frag  DefaultVertexShader.vert  Input.cpp  QuadShape.cpp  Render.cpp  RenderState.cpp  Renderable.cpp  Shader.cpp  Transform.cpp  Vector2.cpp  VertexArray.cpp  VertexBuffer.cpp  Window.cpp
src/Graphics/: Canvas.cpp  Canvas.hpp
src/Graphics/Shapes/: QuadShape.cpp  QuadShape.hpp
src/examples/: test  test.cpp
